--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "set:brave": "export CHROME_BIN='/c/Program Files/BraveSoftware/Brave-Browser/Application/brave.exe'",
+    "test:coverage": "npm run set:brave && ng test --code-coverage --no-watch",
     "serve:ssr:ang-carrossel-de-musicas": "node dist/ang-carrossel-de-musicas/server/server.mjs"
   },
   "private": true,
@@ -36,6 +38,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "cross-env": "^10.1.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
