--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.9",
+    "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.3",
